[HUBZERO][#184][COM_SUPPORT] Fixed issue with outputting attachment description, causing attachment not to be visible.

--- a/components/com_support/assets/css/support.css
+++ b/components/com_support/assets/css/support.css
@@ -863,6 +863,12 @@
 		content: '\2709';
 	}
 
+	ol.comments .attachment:before {
+		content: '\f092';
+		font-family: 'Fontcons';
+		margin-right: 0.4em;
+	}
+
 /* Abuse Item */
 	.abuseitem {
 		padding: 10px 10px 10px 50px; 
